--- a/.github/workflows/build-openwrt-with-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-with-imagebuilder.yml
@@ -7,7 +7,7 @@
 #                https://downloads.immortalwrt.org/releases
 #=====================================================================================
 
-name: Build OpenWrt with ImageBuilder
+name: OpenWrt 23.05
 
 on:
   repository_dispatch:
@@ -21,6 +21,7 @@ on:
         options:
           - openwrt:23.05.3
           - openwrt:23.05.2
+          - openwrt:23.05.1
           - immortalwrt:23.05.2
           - immortalwrt:23.05.1
       openwrt_board:
