--- a/.github/workflows/OpenWrt-23.05.yml
+++ b/.github/workflows/OpenWrt-23.05.yml
@@ -22,12 +22,14 @@ on:
           - openwrt:23.05.3
           - openwrt:23.05.2
           - openwrt:23.05.1
+          - openwrt:23.05.0
           - immortalwrt:23.05.2
           - immortalwrt:23.05.1
+          - immortalwrt:23.05.0
       openwrt_board:
         description: "Select device board"
         required: false
-        default: "all"
+        default: "s905x"
         type: choice
         options:
           - all
