--- a/.github/workflows/OpenWrt-21.02.yml
+++ b/.github/workflows/OpenWrt-21.02.yml
@@ -38,7 +38,7 @@ on:
       openwrt_board:
         description: "Select device board"
         required: false
-        default: "all"
+        default: "s905x"
         type: choice
         options:
           - all
